Add resource link for Data Science in Transport Planning

--- a/resources.html
+++ b/resources.html
@@ -95,6 +95,7 @@
                 <li><a href="https://geographicdata.science/book/intro.html" target="_blank" rel="noopener noreferrer">Geographic Data Science</a> – Intro to geographic data science in Python.</li>
                 <li><a href="https://darribas.org/gds_course/content/home.html" target="_blank" rel="noopener noreferrer">Geographic Data Science</a> – Additional course on geographic data science.</li>
                 <li><a href="https://geocompr.robinlovelace.net/index.html" target="_blank" rel="noopener noreferrer">Geocomputation with R</a> – Advanced geospatial data analysis.</li>
+                <li><a href="https://tdscience.github.io/dstp/">Data Science for Transport Planning</a> – Open source resource list for course at Leeds University.</li>
                 <li><a href="https://spatial-microsim-book.robinlovelace.net/" target="_blank" rel="noopener noreferrer">Spatial Microsimulation</a> – Techniques in spatial microsimulation.</li>
                 <li><a href="https://www.esri.com/arcgis-blog/author/j_nelson/" target="_blank" rel="noopener noreferrer">Esri GIS Blog</a> – GIS and spatial analysis articles.</li>
                 <li><a href="https://www.flickr.com/groups/qgis/pool" target="_blank" rel="noopener noreferrer">QGIS User Group</a> – Flickr community for QGIS projects.</li>
