Update project description for clarity

--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
             </a>
             <div class="project-content">
                 <h2>Net Zero Resilience Index</h2>
-                <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
+                <p>I developed an index to compare the vulnerability of UK regions to green economic restructuring.</p>
                 <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
             </div>
         </div>
